add grey opaciti and corection text

--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
                 </svg>
                 <div class="name">
                     <p>Usdt</p>
-                    <p>Recieved</p>
+                    <p class="chifre:opa">Recieved</p>
                 </div>
             </div>
             <div>
                 <p class="chifre:vert">+$3,546</p>
-                <p>Today, 13:45 pm</p>
+                <p class="chifre:opa">Today, 13:45 pm</p>
             </div>
         </div>
         <div class="criptos">
@@ -377,13 +377,13 @@
                 </svg>
                 <div class="name">
                     <p>BNB </p>
-                    <p>Buy</p>
+                    <p class="chifre:opa">Buy</p>
                 </div>
             </div>
 
             <div>
                 <p class="chifre:vert">+$3,546</p>
-                <p>Today, 13:45 pm</p>
+                <p class="chifre:opa">Today, 5:45 am</p>
             </div>
         </div>
 
@@ -414,13 +414,13 @@
                 </svg>
                 <div class="name">
                     <p>Lite Coin  </p>
-                    <p>Buy</p>
+                    <p class="chifre:opa">Withdrawal</p>
                 </div>
             </div>
 
             <div>
                 <p class="chifre:red">+$3,546</p>
-                <p>Today, 13:45 pm</p>
+                <p class="chifre:opa">Today 7:55 am</p>
             </div>
         </div>
 
@@ -434,13 +434,13 @@
 
                 <div class="name">
                     <p>Bitcoin  </p>
-                    <p>Recieved</p>
+                    <p class="chifre:opa">Recieved</p>
                 </div>
             </div>
 
             <div>
                 <p class="chifre:vert">+ 2.7546</p>
-                <p>Today 8:55 am</p>
+                <p class="chifre:opa">Today 8:55 am</p>
             </div>
         </div>
         <div class="criptos">
@@ -458,13 +458,13 @@
 
                 <div class="name">
                     <p>Etherum  </p>
-                    <p>Recieved</p>
+                    <p class="chifre:opa">Recieved</p>
                 </div>
             </div>
 
             <div>
                 <p class="chifre:vert">+ 1.646</p>
-                <p>Today 10:02 am</p>
+                <p class="chifre:opa">Today 10:02 am</p>
             </div>
         </div>
 
