--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 
-    <title>Title</title>
+    <title>Macket trader</title>
 </head>
 <body>
 
@@ -510,6 +510,5 @@
     
 </div>
 
-<script src="main.js"></script>
 </body>
 </html>
